--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "ownerNumber": ["622150996855@s.whatsapp.net","622150996855@s.whatsapp.net"],
-    "ownerName": "ᴹᴿ᭄ ZeeoneOfcོ ×፝֟͜×",
-    "instagram" : "https://instagram.com/zeeoneofc",
+    "ownerNumber": ["6285875063235@s.whatsapp.net","6285875063235@s.whatsapp.net"],
+    "ownerName": "NeyzarTerluka",
+    "instagram" : "https://instagram.com/neyzardwinansyh",
     "botName": "Haruka-Mdོ ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
